--- a/app/views/dashboard/map.html.erb
+++ b/app/views/dashboard/map.html.erb
@@ -30,9 +30,9 @@
           <% end %>
           <div class="clearfix"></div>
           <div class="labels" style="text-align: center">
-            <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: green"></div> Ligado</div>
-              <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: gray"></div> Desligado</div>
-            <div class="col-xs-12 col-sm-4"><div class="label_status" style="background-color: red"></div> Em manutenção</div>
+            <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: green"></div> Livre</div>
+              <div class="col-xs-6 col-sm-4"><div class="label_status" style="background-color: red"></div> Ocupado</div>
+            <div class="col-xs-12 col-sm-4"><div class="label_status" style="background-color: gray"></div> Em manutenção</div>
           </div>
 
           <% if not @laboratory.function.include? "b"%>
@@ -55,22 +55,61 @@
 .pc {
   padding-top: 1em;
 }
-.maintenance{
-  background-color: red;
+.available{
+  background-color: rgba(255, 0, 0, 0.1);
   text-align: center;
   color: black;
-}
-
-.available{
-  background-color: green;
-  text-align: center;
-  color: white;
+  border-style: solid;
+  border-color: red;
+  border-width: thin;
 }
 
 .busy{
-  background-color: gray;
+  background-color: rgba(0, 255, 0, 0.1);
   text-align: center;
-  color: white;
+  color: black;
+  border-style: solid;
+  border-color: green;
+  border-width: thin;
+}
+
+.maintenance{
+  background-color: rgba(128, 128, 128, 0.1);
+  text-align: center;
+  color: black;
+  border-style: solid;
+  border-color: gray;
+  border-width: thin;
+}
+
+@media screen and (min-width: 768px){
+  .maintenance{
+    background-color: rgba(128, 128, 128, 0.1);
+    height: 20px;
+    width: 5em;
+    border-style: solid;
+    border-color: gray;
+    border-width: thin;
+  }
+  .busy{
+    height: 20px;
+    width: 5em;
+    background-color: rgba(0, 255, 0, 0.1);
+    border-style: solid;
+    border-color: green;
+    border-width: thin;
+  }
+  .available{
+    height: 20px;
+    width: 5em;
+    background-color: rgba(255, 0, 0, 0.1);
+    border-style: solid;
+    border-color: red;
+    border-width: thin;
+  }
+
+  #table-clock{
+  }
 }
 
 .labels{
