--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -374,7 +374,7 @@
             </tr>
             <tr>
               <td>
-                <canvas id="canvasRandom" height="140" width="140" style="margin: 15px 10px 10px 0"></canvas>
+                <canvas id="canvasOver" height="140" width="140" style="margin: 15px 10px 10px 0"></canvas>
               </td>
               <td>
                 <table class="tile_info" id="reviewReport">
@@ -580,7 +580,8 @@ topLabs = <%= raw top5labs %>;
 });
 
 $(document).ready(function(){
-//aqui insere a estrutura de dados do report, japa
+<% overview = @report_overview.to_json %>
+roverview = <%= raw overview %>;
 
   var options = {
     legend: false,
@@ -593,15 +594,15 @@ $(document).ready(function(){
   var dataClass = [];
 
   for(var i = 0; i < 5; i++){
-    if(i < /*aqui vem a estrutura*/ && /*aqui vem a estrutura*/ != 0){
-      $("#reviewReport").append("<tr><td><p><i class ='"+colorClass[selectedColor]+"'></i>"+/*aqui vem a estrutura*/+"</p></td><td>"+/*aqui vem a estrutura*/+"</td></tr>");
-      labelClass.push(/*aqui vem a estrutura*/);
-      dataClass.push(/*aqui vem a estrutura*/);
+    if(i < roverview.length && roverview[i][1] != 0){
+      $("#reviewReport").append("<tr><td><p><i class ='"+colorClass[selectedColor]+"'></i>"+ roverview[i][0] +"</p></td><td>"+ roverview[i][1] +"</td></tr>");
+      labelClass.push(roverview[i][0]);
+      dataClass.push(roverview[i][1]);
       selectedColor++;
     }
   }
 
-  new Chart(document.getElementById("canvasSala"), {
+  new Chart(document.getElementById("canvasOver"), {
     type: 'doughnut',
     tooltipFillColor: "rgba(51, 51, 51, 0.55)",
     data: {
