bug fixing new graphic

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -592,7 +592,7 @@ roverview = <%= raw overview %>;
   var selectedColor = 0;
   var labelClass = [];
   var dataClass = [];
-  var names = [pending, resolved, verifying];
+  var names = ["pending", "resolved", "verifying"];
   var namesPort = ["Pendente", "Resolvido", "Verificando"];
 
   for(var i = 0; i < 3; i++){
