--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -76,10 +76,11 @@
   </div>
    <div class="col-sm-3 col-md-12" align:"center">
 	<h1>Changelogs</h1>
-	<p align:"justify">18/11/2016 - Adição da pagina Sobre<br /></p>
-	<p align:"justify">19/11/2016 - Indentificado problemas na pagina About<br /></p>
-	<p align:"justify">20/11/2016 - Históricos para o administrador<br /></p>
+  <p align:"justify">07/12/2016 - Criado página para cadastro de digitais<br /></p>
   <p align:"justify">05/12/2016 - Modificado layout dos formulários e redefinido algumas características das páginas<br /></p>
+	<p align:"justify">20/11/2016 - Históricos para o administrador<br /></p>
+	<p align:"justify">19/11/2016 - Indentificado problemas na pagina About<br /></p>
+	<p align:"justify">18/11/2016 - Adição da pagina Sobre<br /></p>
 	</div>
  
   
