Fixed HTTP request to restful api, now it is a patch instead a post

--- a/app/views/report/_report_edit.html.erb
+++ b/app/views/report/_report_edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container report-form-inside">
     <div class="jumbotron">
       <button id="btn-close" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
-      <%= form_tag("/dashboard/report/#{@laboratory.initials}", method: "post") do %>
+      <%= form_tag(dashboard_reports_edit_path, method: "patch") do %>
         <h5>Report feito em </h5>
         <div class="form-group">
           <%= text_field "report_id_", nil, class: "form-control hidden", :readonly => "true"%>
