--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -40,7 +40,7 @@
               <h1>Está fechado :(</h1>
             <% end %>
           <% end %>
-          <iframe id="table-clock" src="/LSO/subjects/" style="overflow: auto; width: 100%" frameborder ="0">
+          <iframe id="table-clock" src="<%= laboratory_subjects_path(@labs)%>" style="overflow: auto; width: 100%" frameborder ="0">
           </iframe>
         </div>
       </div>
