--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,20 @@
       </a>
 
       <ul class="nav navbar-nav navbar-right visible-md visible-lg">
-        <li><%= link_to('Home', '/' )%></li>
+        <% if @labs != nil %>
+          <li><%= link_to('Home', laboratory_path(@labs))%></li>
+        <% else %>
+          <li><%= link_to('Home', root_path )%></li>
+        <% end %>
         <li><%= link_to('Sobre', '/about' )%></li>
         <% if user_signed_in? %>
           <li role="separator" class="divider"></li>
           <li><a href="/users/edit">Perfil<span class="sr-only">(current)</span></a></li>
-          <li><a href="/report/show">Reports<span class="sr-only">(current)</span></a></li>
+
+          <% if @labs != nil %>
+            <li><%= link_to 'Reports', laboratory_reports_path(@labs) %></li>
+          <% end %>
+
           <% if current_user.function == "admin" %>
             <li><%= link_to('Dashboard', '/dashboard/') %></li>
           <% end %>
