--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -19,7 +19,7 @@
               <li><%= link_to('Dispositivo Embarcado', dashboard_embedded_path(lab.initials))%></li>
             <% end %>
             <% if lab.function.include? "e" %>
-              <li><%= link_to('Acesso Autorizado', "/dashboard/access/#{lab.initials}")%></li>
+              <li><%= link_to('Acesso Autorizado', dashboard_access_path(lab.initials))%></li>
             <% end %>
           </ul>
         </li>
