--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <head>
-<style>
+  <style>
 
 .btn { display: inline-block; *display: inline; *zoom: 1; padding: 4px 10px 4px; margin-bottom: 0; font-size: 13px; line-height: 18px; color: #333333; text-align: center;text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; background-color: #f5f5f5; background-image: -moz-linear-gradient(top, #000000, #e6e6e6); background-image: -ms-linear-gradient(top, #000000, #e6e6e6); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, #000000, #e6e6e6); background-image: -o-linear-gradient(top, #000000, #e6e6e6); background-image: linear-gradient(top, #000000, #e6e6e6); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#000000, endColorstr=#e6e6e6, GradientType=0); border-color: #e6e6e6 #e6e6e6 #e6e6e6; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border: 1px solid #e6e6e6; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); cursor: pointer; *margin-left: .3em; }
 .btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { background-color: #e6e6e6; }
@@ -50,12 +50,16 @@ h2 { color: #000; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; tex
 
 .frmt:focus { box-shadow: inset 0 -5px 45px rgba(0,0,0,0.4), 0 1px 1px rgba(255,255,255,0.2); }
 
-</style>
+.fa .fa-plus {
+  color: white;
+}
+
+  </style>
 </head>
 
 <div class="hidden-xs col-md-4"></div>
-  <div class="jumbotron col-md-4">
-    <div class="container">
+<div class="jumbotron col-md-4">
+  <div class="container">
     <h2>Editar Perfil</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
@@ -64,7 +68,7 @@ h2 { color: #000; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; tex
       </div>
 
       <div class="fieldType">
-        <%= f.select :type_user, ['Graduação', 'Pós-Graduação', 'Professor', 'Técnico Administrativo'], :selected => f.object.type_user%>
+        <%= f.select :type_user, [['Graduação', 'graduation'], ['Pós-Graduação', 'postgraduate'], ['Professor', 'professor'], ['Técnico Administrativo', 'administrative technician']], :selected => f.object.type_user%>
       </div>
 
       <div class="fieldEmail">
@@ -89,12 +93,112 @@ h2 { color: #000; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; tex
         <%= f.password_field :current_password, autocomplete: "off" , placeholder: "Senha atual", class:"frmt"%>
       </div><br />
 
+      <% if resource.type_user == "professor" %>
+        <div class="row">
+          <div class="col-md-9">
+            <input placeholder="Orientandos" class="frmt" list="student_names" id="form_student_names" name="list">
+          </div>
+          <div class="col-md-3">
+            <a id="plus_add_student" class="btn btn-primary btn-block btn-large">
+              <i class="fa fa-plus" aria-hidden="true"></i></a>
+            </input>
+          </div>
+        </div>
+
+        <%= fields_for :name, resource.students do |student_fields| %>
+          <ul id="student_names_div">
+            <% count = 0 %>
+            <% student_fields.object.each do |student| %>
+              <input name="user[users_advisor[<%= count %>]" id="student_<%=count %>" style="display: none" value="<%= student.id%>"></input>
+              <li id="student_<%= count %>" ><%=student.name%><i class="fa fa-times delete-student" data-id="student_<%= count %>" aria-hidden="true"></i></li>
+              <% count = count + 1 %>
+            <% end %>
+          </ul>
+
+          <datalist id="student_names">
+            <% @students.each do |st| %>
+              <option data-id="<%= st.id %>" value="<%=st.name %>">
+            <% end %>
+          </datalist>
+
+        <% end %>
+      <% end %>
+
       <div class="buttonEdit">
         <%= f.submit "Editar Perfil" , class:"btn btn-primary btn-block btn-large"%>
         <%= link_to "Voltar", :back, class:"btn btn-primary btn-block btn-large" %>
       </div>
     <% end %>
-    </div>
   </div>
-  <div class="hidden-xs col-md-4"></div>
 </div>
+<div class="hidden-xs col-md-4"></div>
+</div>
+
+
+<% if resource.type_user == "professor" %>
+  <script>
+var numberList = <%= resource.students.count %>;
+
+function dataListAdd(e){
+  value = document.getElementById('form_student_names').value;
+
+  // users passed a empty input
+  if (value === "")
+    return;
+
+  array = document.querySelectorAll('[data-id]');
+  user_id = document.getElementById('form_student_names').value;
+
+  array.forEach(function searching(item, index){
+    if(item.value === value){
+      user_id = item.getAttribute("data-id");
+    }
+  });
+
+  // users passed a value, but this value is invalid
+  if (value === user_id){
+    document.getElementById('form_student_names').value = "";
+    return;
+  }
+
+  input = document.createElement("input");
+  input.setAttribute("style", "display: none");
+  input.setAttribute("name", "user[users_advisors["+numberList+"]]");
+  input.setAttribute("value", user_id);
+  input.setAttribute("id", "student_"+numberList);
+  document.getElementById("student_names_div").appendChild(input);
+
+  list = document.createElement("li");
+  list.setAttribute("id","student_"+numberList);
+  list.innerHTML = value;
+
+  image = document.createElement("i");
+  image.setAttribute("class", "fa fa-times");
+  image.setAttribute("aria-hidden", "true");
+  image.addEventListener("click", dataListRemove);
+  image.setAttribute("data-id", "student_"+numberList);
+
+  document.getElementById("student_names_div").appendChild(input);
+  aux = document.getElementById("student_names_div").appendChild(list);
+  aux.appendChild(image);
+
+  numberList +=1;
+  document.getElementById('form_student_names').value = "";
+}
+
+function dataListRemove(e){
+  array = document.querySelectorAll("#"+e.target.getAttribute('data-id'));
+
+  array.forEach(function removeStudent(item, index){
+    item.remove();
+  });
+}
+
+var lokura;
+document.getElementById('plus_add_student').addEventListener("click", dataListAdd);
+document.querySelectorAll('.delete-student').forEach(function eventListener(item, index){
+  item.addEventListener("click", dataListRemove);
+});
+  </script>
+
+<% end %>.
