Almost finishing, just need to figure out how to deal with secure nested parameters with devise

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -163,7 +163,7 @@ function dataListAdd(e){
 
   input = document.createElement("input");
   input.setAttribute("style", "display: none");
-  input.setAttribute("name", "user[users_advisors["+numberList+"]]");
+  input.setAttribute("name", "user[users_advisor["+numberList+"]]");
   input.setAttribute("value", user_id);
   input.setAttribute("id", "student_"+numberList);
   document.getElementById("student_names_div").appendChild(input);
