Remove autocomplete for input

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -96,7 +96,7 @@ h2 { color: #000; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; tex
       <% if resource.type_user == "professor" %>
         <div class="row">
           <div class="col-md-9">
-            <input placeholder="Orientandos" class="frmt" list="student_names" id="form_student_names" name="list">
+            <input autocomplete="off" placeholder="Orientandos" class="frmt" list="student_names" id="form_student_names" name="list">
           </div>
           <div class="col-md-3">
             <a id="plus_add_student" class="btn btn-primary btn-block btn-large">
