--- a/app/views/dashboard/studentlist.html.erb
+++ b/app/views/dashboard/studentlist.html.erb
@@ -1,41 +1,45 @@
 <div class="col-md-12 col-sm-12 col-xs-12 <%= hidden %>">
   <div class="x_panel">
     <div class="x_title">
-      <h2>Histórico de Acesso</h2>
+      <h2>Lista de autorizados</h2>
 
-      <ul class="nav navbar-right panel_toolbox">
-        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Settings 1</a>
-            </li>
-            <li><a href="#">Settings 2</a>
-            </li>
-          </ul>
-        </li>
-        <li><a class="close-link"><i class="fa fa-close"></i></a>
-        </li>
-      </ul>
-      <div class="clearfix"></div>
-    </div>
+            <ul class="nav navbar-right panel_toolbox">
+              <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Settings 1</a>
+                  </li>
+                  <li><a href="#">Settings 2</a>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="close-link"><i class="fa fa-close"></i></a>
+              </li>
+            </ul>
+            <div class="clearfix"></div>
+          </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-12">
-      <div class="col-xs-7 col-sm-6"><strong>Nome</strong></div>
-      <div class="col-xs-5 col-sm-6"><strong>Data de Entrada</strong></div>
-    </div>
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="col-xs-4 col-sm-3"><strong>Nome</strong></div>
+            <div class="col-xs-2 col-sm-3"><strong>Orientador</strong></div>
+            <div class="col-xs-3 col-sm-3"><strong>Tipo</strong></div>
+            <div class="col-xs-3 col-sm-3"><strong>Data de expiração</strong></div>
+          </div>
 
-    <div class="clearfix"></div>
+          <div class="clearfix"></div>
 
-    <% @access_people.each do |a| %>
-      <div class="row-info col-xs-12 col-sm-12 col-md-12">
-        <div class="col-xs-7 col-sm-6"><%= a.user.name %></div>
-        <div class="col-xs-5 col-sm-6"><%= a.created_at.strftime("%d/%m/%Y às %H:%M:%S") %></div>
-      </div>
-    <% end %>
+          <% @access_people.each do |a| %>
+            <div class="row-info col-xs-12 col-sm-12 col-md-12">
+              <div class="col-xs-4 col-sm-3"><%= a.user.name %></div>
+              <div class="col-xs-2 col-sm-3"><%= a.user.orientador %></div>
+              <div class="col-xs-3 col-sm-3"><%= a.user.type %></div>
+              <div class="col-xs-3 col-sm-3"><%= a.created_at.strftime("%d/%m/%Y às %H:%M:%S") %></div>
+            </div>
+          <% end %>
 
-    <div class="x_content">
+          <div class="x_content">
       <br />
     </div>
 
