--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -20,6 +20,7 @@
             <% end %>
             <% if lab.function.include? "e" %>
               <li><%= link_to('Acesso Autorizado', dashboard_access_path(lab.initials))%></li>
+              <li><%= link_to('Estudantes Ativos', dashboard_access_students_path(lab.initials))%></li>
             <% end %>
           </ul>
         </li>
