--- a/app/views/dashboard/js/time_open_average.js.erb
+++ b/app/views/dashboard/js/time_open_average.js.erb
@@ -1,23 +1,22 @@
 $(document).ready(function() {
+  var adicao;
   var time_open_week_chart = <%= raw @labopen_week.to_json %>;
   var time_open_last_week_chart = <%= raw @labopen_last_week.to_json %>;
   var porcentagem = time_open_week_chart - time_open_last_week_chart;
   
-  if(time_open_last_week_chart == 0)
-    porcentagem = porcentagem / 1;
-  else
-    porcentagem = porcentagem / time_open_week_chart;
-  porcentagem = porcentagem * 100;
+  if (time_open_last_week_chart != 0) {
+    porcentagem /= time_open_week_chart;
+  }
+  porcentagem *= 100;
 
-var adicao;
 
-if(time_open_week_chart > time_open_last_week_chart){
-  adicao = " green";
-}else if(time_open_week_chart < time_open_last_week_chart){
-  adicao = " red";
-}else{
-  adicao = "";
-}
+  if (time_open_week_chart > time_open_last_week_chart) {
+    adicao = " green";
+  } else if (time_open_week_chart < time_open_last_week_chart) {
+    adicao = " red";
+  } else {
+    adicao = "";
+  }
 
 $("#TMA").append("<span class='count_top'><i class='fa fa-clock-o'></i> Tempo Médio Aberto</span>");
 
